# mahjong-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  LICENSE  Makefile  README.md  demo.tape  mahjong.py  pyproject.toml
mahjong_tui/: __init__.py  app.py  game.py  layout.py  render.py  screens.py  tiles.py  tui.tcss
screenshots/: README.md  endscreen.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py  tile_test.py
