[project]
name = "mahjong-tui"
version = "0.1.0"
description = "Terminal-native Mahjong Solitaire using KMahjongg layouts"
requires-python = ">=3.10"
license = {text = "GPL-2.0-or-later"}
dependencies = [
    "textual>=0.80,<10",
]

[project.optional-dependencies]
dev = [
    "pexpect>=4.9",
    "pyte>=0.8",
    "pyright>=1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mahjong_tui"]

[tool.setuptools.package-data]
mahjong_tui = ["tui.tcss"]
